Eliminate Redundant GitHub API Invocations on Empty Pages
- Early‑exit on empty pages to eliminate redundant API calls and reduce latency.
- Confirmed a marked performance uplift through comprehensive testing.
- Exposed a configurable PER_PAGE parameter in GitHubApiService, driven by application.properties for seamless tuning.