@@ -9,11 +9,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpStatusCodeException;
 import org.springframework.web.client.UnknownHttpStatusCodeException;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 @Service
 public class CommentService {
@@ -78,12 +80,16 @@ public class CommentService {
 
 
     List<Comment> getCommentsInternal(String owner, String repo, int issueNumber, int maxPages) {
-        return IntStream.rangeClosed(1, maxPages)
-                .parallel()
-                .mapToObj(page -> handleCommentApiCall(owner, repo, issueNumber, page, maxPages))
-                .flatMap(Arrays::stream)
-                .peek(comment -> {if (comment.getAuthor() != null) comment.setAuthor(userService.getUserInternal(comment.getAuthor().getUsername()));})
-                .collect(Collectors.toList());
+        List<Comment> comments = new ArrayList<>();
+        for (int page = 1; page <= maxPages; page++) {
+            Comment[] commentsArray = handleCommentApiCall(owner, repo, issueNumber, page, maxPages);
+            comments.addAll(Stream.of(commentsArray).parallel()
+                    .peek(comment -> {if (comment.getAuthor() != null) comment.setAuthor(userService.getUserInternal(comment.getAuthor().getUsername()));})
+                    .toList()
+            );
+            if (commentsArray.length < gitHubAPIService.PER_PAGE) break;
+        }
+        return comments;
     }
 
     public List<Comment> getComments(String owner, String repo, int issueNumber, int maxPages) {
